# portraits

./: .coverage  CLAUDE.md  COMPLEXITY_PROGRESS_UPDATE.md  README.md  app.py  cleanup_plan.md  generate_images.py  generate_morph_video.py  generate_video.py  generate_voice.py  main.py  pyproject.toml
portraits/: __init__.py  config.yaml
portraits/core/: __init__.py  config.py  device.py  exceptions.py  utils.py
portraits/generators/: __init__.py  image.py  morph.py  morph_helpers.py  morph_original.py  smart_prompts.py  video.py  video_helpers.py  video_original.py  video_refactored.py  voice.py  voice_helpers.py  voice_refactored.py
portraits/tests/: __init__.py  test_device.py  test_utils.py
portraits/ui/: __init__.py  app.py
